You WIN notification

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             font-size: 0;
         }
     </style>
-
+    <link rel="stylesheet" type="text/css" href="cesese/status.css" />
+    
 
     <script src="kodyazlightsout.js" defer></script>
 </head>
@@ -43,6 +44,10 @@
 
 
     <div id="square" class="board"></div>
+    
+<section role="status" id="you-win" hidden>
+    <p>You <strong>WIN</strong></p>
+</section>
 
 </body>
 
